Updating field & flow labels as per @solo-1234's suggestion to move from calc/lookup notation to child/parent

--- a/extra-tests/classes/CustomMetadataDrivenTests.cls
+++ b/extra-tests/classes/CustomMetadataDrivenTests.cls
@@ -79,7 +79,7 @@ private class CustomMetadataDrivenTests {
     childOne.DateField__c = childOne.DateField__c.addDays(-1);
     update childOne;
 
-    // begin recursive update, but with a Calc Item Where Clause field change
+    // begin recursive update, but with a Child Object Where Clause field change
     childOne.NumberField__c = 1;
     update childOne;
 
