--- a/rollup/core/classes/RollupCalcItemReplacer.cls
+++ b/rollup/core/classes/RollupCalcItemReplacer.cls
@@ -2,7 +2,7 @@
  * @return `List<SObject>` - Calc items
  * Depending on the `RollupControl__mdt.ReplaceCalcItemsAsyncWhenOverCount__c` field,
  * re-queries for passed-in calc items when they have either:
- * - a polymorphic calc item where clause field
+ * - a polymorphic child object where clause field
  * - parent-level fields
  */
 public without sharing class RollupCalcItemReplacer {
@@ -135,7 +135,7 @@ public without sharing class RollupCalcItemReplacer {
   private List<SObject> replaceCalcItemsWithPolymorphicWhereClauses(List<SObject> calcItems, Rollup__mdt metadata) {
     final String typeField = '.Type';
     final String owner = 'Owner.';
-    // first we check to see if there is a calc item where clause, and that it contains any of the common polymorphic fields
+    // first we check to see if there is a child object where clause, and that it contains any of the common polymorphic fields
     SObject firstItem = calcItems[0];
     Boolean hasOwnerClause = metadata.CalcItemWhereClause__c?.contains(owner) == true;
     Boolean hasTypeClause = metadata.CalcItemWhereClause__c?.contains(typeField) == true;
@@ -150,7 +150,7 @@ public without sharing class RollupCalcItemReplacer {
       return calcItems;
     }
 
-    // the calc item where clause contains at least one polymorphic field, but before re-querying we validate whether or not the fields are already provided
+    // the child object where clause contains at least one polymorphic field, but before re-querying we validate whether or not the fields are already provided
     Map<String, Object> populatedFields = firstItem.getPopulatedFieldsAsMap();
     List<String> optionalWhereClauses = new List<String>();
     Set<String> additionalQueryFields = new Set<String>();
